--- a/css/main.css
+++ b/css/main.css
@@ -159,3 +159,112 @@ nav {
 .btn--red:hover {
 	background-color: #dd3434;
 }
+
+
+/*Features
+====================*/
+
+
+.features {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 100px 0;
+}
+
+.features__item {
+	width: 33.33333%;
+	padding: 0 40px;
+	margin: 25px 0;
+
+	text-align: center;
+}
+
+.features__icon {
+	margin-bottom: 25px;
+}
+
+.features__title {
+	margin-bottom: 20px;
+
+	font-size: 14px;
+	color: #2d3033;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.features__text {
+	font-size: 14px;
+	line-height: 1.5;
+	color: #6c7279;
+
+}
+
+
+/*----Works----*/
+
+
+.works {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.works__item {
+	width: 25%;
+	height: 350px;
+
+	border-bottom: 2px solid #fff;
+	border-right: 2px solid #fff;
+	position: relative; /*Чтоб картинка позиционировалась абсолютно относительно Work__items*/
+	overflow: hidden; /*скрываем все что вылазит за границы нашего блока*/
+}
+
+.works__item:hover .works__content {
+	opacity: 1;  /*через псевдокласс прописываем что при наводе на works__item появляется works__content*/
+}
+
+.works__photo {
+	position: absolute; /*Чтоб картинка позиционировалась абсолютно относительно Work__items при такой записи она находиться внутри work__items и позиционируется абсолютно относительно этого блока*/
+	top: 50%;
+	left: 50%; /* прижимаем вверх и лево, а после выравниваем по оси Х и У*/
+	z-index: 1;
+
+	transform: translate3d(-50%, -50%, 0); /* так как картинка уехала вниз и право(после 50%) выравниваем с помошью этой команды*/
+
+}
+
+.works__content {
+	width: 100%;
+	height: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+
+	opacity: 0; /* скрываем work__content, так как он нам надо только при наводе*/
+
+
+	background-color: rgba(232, 69, 69, 0.9);
+
+	position: absolute; /*вывели текст поверх картинки*/
+
+	top: 0;
+	left: 0;
+	z-index: 2;
+
+	transition: opacity 0.2s linear;
+}
+
+.works__title {
+	margin-bottom: 5px;
+
+	font-size: 14px;
+	font-weight: 700;
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.works__text {
+	font-size: 14px;
+	color: #fff;
+}
