--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,9 @@ p {
 
 .container {
 	width: 100%;
-	max-width: 1170px;
+	max-width: 1200px;
 	margin: 0 auto;
+	padding: 0 15px;
 }
 
 /*Header
@@ -266,5 +267,147 @@ nav {
 
 .works__text {
 	font-size: 14px;
+	color: #fff;
+}
+
+
+/*===Team===*/
+
+.team {
+	margin: 100px 0 70px;
+}
+
+.team__inner {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 -15px; /*Делаем отсуп минусовой для того чтоб с лева и права у блоков небыло отступа от контейнера*/
+}
+
+.team__item {
+	width: 25%;
+	padding: 0 15px;
+
+	margin-bottom: 30px;
+}
+
+.team__photo{
+	display: block;
+	max-width: 100%;
+	height: auto;
+	margin-bottom: 20px;
+}
+
+.team__name {
+	margin-bottom: 8px;
+
+	font-size: 22px;
+	color: #2d3033;
+}
+
+.team__prof {
+	margin-bottom: 15px;
+
+	font-size: 13px;
+	color: #e84545;
+	text-transform: uppercase;
+}
+
+.team__text {
+	margin-bottom: 20px;
+
+	font-size: 14px;
+	color: #6c7279;
+	line-height: 1.5;
+}
+
+
+/*===Social===*/
+
+.social {
+	display: flex;
+}
+
+.social__item {
+	display: flex; /*прописали чтоб обратиться к иконкам*/
+	justify-content: center;
+	align-items: center;
+
+	width: 40px;
+	height: 40px;
+	margin-right: 4px;
+	background-color: #fff;
+	border: 1px solid #e8ecee;
+	transition: background 0.1s linear;
+}
+
+.social__item:hover {
+	background-color: #e8ecee; /*бэкграунд при наводе меняет цвет*/
+}
+
+.social__item:hover .social__icon {
+	fill: #e84545;     /*меняем цвет иконки*/
+}
+
+
+.social__icon {
+	display: block;
+	height: 18px;
+	fill: #c6cacc; /*задаем цвет иконке*/
+	transition: fill 0.1s linear;
+}
+
+
+
+/* Reviews
+==============*/
+
+
+.reviews {
+	background-color: #53354a;
+	overflow: hidden;
+}
+
+.reviews__item {
+	display: flex;
+	fles-wrap: wrap;
+}
+
+.reviews__photo {
+	width: 50%;
+	height: 500px;
+	position: relative; /*Чтоб фотографию спозиционировать относительно этого блока*/
+}
+
+.reviews__image {
+	position: absolute;
+	top: 50%;
+	right: 0;
+	z-index: 1;
+
+	transform: translateY(-50%);
+}
+
+.reviews__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 50%;
+	padding-left: 80px;
+}
+
+.reviews__text {
+	margin-bottom: 25px;
+	
+	font-family: 'Cardo', sans-serif;
+	font-style: italic;
+	font-size: 36px;
+	line-height: 1.2;
+	color: #fff;
+}
+
+.reviews__author {
+	font-size: 13px;
+	font-weight: 700;
+	text-transform: uppercase;
 	color: #fff;
 }
