--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,7 @@ nav {
 	font-weight: 600;
 	text-transform: uppercase;
 	text-decoration: none;
+	text-align: center;
 
 	transition: background 0.1s linear; /*Плавность перехода с одного цвета в другой для кнопки*/
 }
@@ -159,6 +160,10 @@ nav {
 
 .btn--red:hover {
 	background-color: #dd3434;
+}
+
+.btn--long {
+	min-width: 280px;
 }
 
 
@@ -327,6 +332,10 @@ nav {
 	display: flex;
 }
 
+.social--footer {
+	justify-content: center;
+}
+
 .social__item {
 	display: flex; /*прописали чтоб обратиться к иконкам*/
 	justify-content: center;
@@ -349,11 +358,26 @@ nav {
 }
 
 
+.social--footer .social__item{  /*изменяем значения через селектор родителя(если социал итем находиться в социал футер происходит...)*/
+	background-color: transparent;
+	border-width: 2px;
+	border-color: #fff;
+	border-radius: 2px;
+}
+
+.social--footer .social__item:hover{
+	background-color: #fff;
+}
+
 .social__icon {
 	display: block;
 	height: 18px;
 	fill: #c6cacc; /*задаем цвет иконке*/
 	transition: fill 0.1s linear;
+}
+
+.social--footer .social__icon{
+	fill: #fff;
 }
 
 
@@ -409,5 +433,101 @@ nav {
 	font-size: 13px;
 	font-weight: 700;
 	text-transform: uppercase;
+	color: #fff;
+}
+
+
+/* Download
+==============*/
+
+.download {
+	margin: 90px 0;
+	text-align: center;
+}
+
+
+
+.download__title {
+	margin-bottom: 10px;
+	font-size: 28px;
+	font-weight: 300;
+	color: #2d3033;
+}
+
+.download__text {
+	margin-bottom: 30px;
+
+	font-size: 13px;
+	color: #2d3033;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+
+
+
+/* Footer
+==============*/
+
+.footer {
+
+	background-color: #3a3e64;
+}
+
+.footer__inner {
+	padding: 70px 0;
+	display: flex;
+	flex-wrap: wrap; /*Делаем наперед под адаптацию, чтоб можно было перемещать блоки друг под друга*/
+}
+
+.footer__block {
+	width: 33.33333%;
+	padding: 0 15px;
+
+	text-align: center;
+}
+
+.footer__title {
+	margin-bottom: 10px;
+
+	color: #fff;
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.footer__address {
+	font-size: 14px;
+	font-style: normal;
+	line-height: 1.5;
+	color: rgba(255, 255, 255, .5);
+}
+
+.footer__text{
+	font-size: 14px;
+	line-height: 1.5;
+	color: rgba(255, 255, 255, .5);
+}
+
+
+
+/* Copyright
+==============*/
+
+
+.copyright {
+	padding: 20px 0;
+
+	background-color: #313454;
+}
+
+.copyright__text {
+	text-align: center;
+	font-size: 14px;
+	line-height: 1.5;
+	color: #808080;
+}
+
+.copyright__text span {
 	color: #fff;
 }
