--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ nav {
 	padding-top: 100px;
 
 	background: #31344e url("../img/bg_header.jpg") center no-repeat;
-	background-size: cover;
+	background-size: cover; /*Масштабирует изображение с сохранением пропорций так, чтобы его ширина или высота равнялась ширине или высоте блока.*/
 }
 
 .intro__inner {
@@ -530,4 +530,97 @@ nav {
 
 .copyright__text span {
 	color: #fff;
+}
+
+.burger {
+	display: none;
+	padding: 9px 2px;
+	border: 0;
+	background: none;
+	cursor: pointer;
+}
+
+.burger__item {
+	display: block;
+	width: 30px;
+	height: 3px;
+
+	background-color: #fff;
+
+	font-size: 0;
+	color: transparent;
+
+	position: relative;
+}
+
+.burger__item:before,.burger__item:after {
+	content: "";
+	height: 100%;
+
+	background-color: #fff;
+
+	
+
+	position: absolute;
+	right: 0;
+	z-index: 1;
+
+
+}
+
+.burger__item:before{
+	top: -8px;
+	width: 30px;
+}
+
+.burger__item:after {
+	bottom: -8px;
+	width: 30px;
+}
+
+
+
+/* Media
+==============*/
+
+
+@media (max-width: 991px) {
+
+
+	/* Nav*/
+
+.nav{
+		display: none;
+	}
+
+	/*Burger*/
+
+.burger {
+	display: block;
+}
+
+	/*Intro*/
+
+
+.intro__title {
+	font-size: 40px;
+}
+
+}
+
+@media (max-width: 767px) {
+
+	.intro {
+		height: auto;
+		padding-top: 130px;
+		padding-bottom: 30px;
+	}
+
+	.intro__title {
+	font-size: 30px;
+}
+	.intro__subtitle{
+		font-size: 16px;
+		margin-bottom: 30px;
+	}
 }
