--- a/css/main.css
+++ b/css/main.css
@@ -409,9 +409,19 @@ nav {
 	overflow: hidden;
 }
 
+.reviews__slider {
+	height: 500px;
+	overflow: hidden;
+}
+
+.reviews__slider.slick-initialized {
+	height: auto;
+}
+
 .reviews__item {
 	display: flex;
 	flex-wrap: wrap;
+	overflow: hidden;
 }
 
 .reviews__photo {
@@ -454,6 +464,46 @@ nav {
 	color: #fff;
 }
 
+.slick-dots {
+	display: flex;
+	justify-content: center;
+	width: 50%;
+	margin: 0;
+	padding: 0 0 10px;
+	list-style: none;
+
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	z-index: 2; 
+}
+
+.slick-dots li {
+	margin: 0 5px;
+}
+
+.slick-dots button {
+	width: 15px;
+	height: 15px ;
+	background: #fff;
+	border-radius: 50%;
+	border: 0;
+	opacity: 0.5;
+	padding: 0;
+
+	cursor: pointer;
+
+	font-size: 0;
+	color: transparent;
+}
+
+.slick-dots button:focus {
+	outline: 0;
+}
+
+.slick-dots .slick-active button {
+	opacity: 1;
+}
 
 /* Download
 ==============*/
@@ -634,7 +684,27 @@ nav {
 
 .nav{
 		display: none;
+
+		flex-direction: column;
+		width: 100%;
+
+		background-color: #31344e;
+
+		text-align: right;
+		position: absolute;
+		top: 100%;
+		right: 0;
 	}
+
+.nav.show {
+	display: flex;
+}
+
+.nav__link {
+		padding: 9px 15px;
+	}
+
+
 
 	/*Burger*/
 
